--- a/index.ipynb
+++ b/index.ipynb
@@ -1078,12 +1078,20 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/sklearn/linear_model/logistic.py:433: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
+      "  FutureWarning)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "LogisticRegression(C=1000000000000.0, class_weight=None, dual=False,\n",
        "          fit_intercept=False, intercept_scaling=1, max_iter=100,\n",
-       "          multi_class='ovr', n_jobs=1, penalty='l2', random_state=None,\n",
-       "          solver='liblinear', tol=0.0001, verbose=0, warm_start=False)"
+       "          multi_class='warn', n_jobs=None, penalty='l2', random_state=None,\n",
+       "          solver='warn', tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
      "execution_count": 8,
@@ -1119,28 +1127,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0    568\n",
-      "1    100\n",
-      "Name: Survived, dtype: int64\n",
-      "0    0.850299\n",
-      "1    0.149701\n",
-      "Name: Survived, dtype: float64\n"
+      "568\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "#We could subtract the two columns. If values or equal, difference will be zero. Then count number of zeros.\n",
+    "#We could subtract the two columns. If values or equal, difference will be zero. \n",
+    "# Then count number of zeros.\n",
     "residuals = np.abs(y_train - y_hat_train)\n",
-    "print(pd.Series(residuals).value_counts())\n",
-    "print(pd.Series(residuals).value_counts(normalize=True))"
+    "print(pd.Series(residuals).value_counts()[0])\n",
+    "# print(pd.Series(residuals).value_counts(normalize=True))"
    ]
   },
   {
@@ -1152,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1189,6 +1193,13 @@
     "\n",
     "In this lesson, we took a more complete look at a data science pipeline for logistic regression, splitting the data into train and test sets and using the model to make predictions. You'll practice this on your own in the upcoming lab before then having a more detailed discussion of more nuanced methods for evaluating our classifier's performance."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1207,7 +1218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
